<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello</name>
  <version>0.0.1</version>
  <description>Package to control DJI tello drones, provides data and control over the drone based on the official SDK provided by DJI.</description>
  <maintainer email="tentone@outlook.com">tentone</maintainer>
  <license>MIT</license>

  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>tello_msg</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
